[gd_scene load_steps=8 format=3 uid="uid://c0vjwm01bb3w8"]

[ext_resource type="PackedScene" uid="uid://fmce84a34xw5" path="res://entities/slot/slot.tscn" id="1_3a4ns"]
[ext_resource type="Script" uid="uid://b1fpfumm0kmbl" path="res://entities/table/table.gd" id="1_x151d"]
[ext_resource type="PackedScene" uid="uid://b84mg7ou5fxfa" path="res://entities/slot/zone/card/card.tscn" id="2_8iqho"]
[ext_resource type="PackedScene" uid="uid://djj2tbo6fx0g4" path="res://entities/slot/zone/pile/pile.tscn" id="3_8iqho"]
[ext_resource type="Shader" uid="uid://fay3xeuw6qav" path="res://entities/table/token/shaders/4 corner gradient.gdshader" id="4_jaq8v"]
[ext_resource type="FontFile" uid="uid://cnsjgv1vojrgp" path="res://assets/fonts/Chicoree.ttf" id="6_jaq8v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xusbr"]
shader = ExtResource("4_jaq8v")
shader_parameter/bottomleft = Color(0, 0, 0.9, 1)
shader_parameter/topleft = Color(0, 0.9, 0, 1)
shader_parameter/bottomright = Color(0.9, 0, 0, 1)
shader_parameter/topright = Color(0.9, 0.9, 0.1, 1)

[node name="Table" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_x151d")
card_scene = ExtResource("2_8iqho")

[node name="ActiveSlot" parent="." instance=ExtResource("1_3a4ns")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 100)
layout_mode = 0
offset_left = -80.0
offset_top = -125.0
offset_right = 80.0
offset_bottom = -25.0

[node name="ActivePile" parent="ActiveSlot/PilesHolder" index="0" instance=ExtResource("3_8iqho")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 100)
layout_mode = 2
type = 1

[node name="PowerToken" parent="ActiveSlot/PilesHolder/ActivePile/ZoneContainer/VBoxContainer/HBoxContainer" index="0"]
material = SubResource("ShaderMaterial_xusbr")

[node name="CardsHolder" parent="ActiveSlot/PilesHolder/ActivePile/ZoneContainer/VBoxContainer" index="1"]
custom_minimum_size = Vector2(0, 48)

[node name="HandSlot" parent="." instance=ExtResource("1_3a4ns")]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 48)
layout_mode = 0
offset_left = -160.0
offset_top = 25.0
offset_right = 160.0
offset_bottom = 73.0

[node name="HandPile" parent="HandSlot/PilesHolder" index="0" instance=ExtResource("3_8iqho")]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
type = 2
status = 3

[node name="ZoneContainer" parent="HandSlot/PilesHolder/HandPile" index="0"]
offset_right = 320.0
offset_bottom = 48.0

[node name="PowerToken" parent="HandSlot/PilesHolder/HandPile/ZoneContainer/VBoxContainer/HBoxContainer" index="0"]
visible = false

[node name="LockCheckButton" parent="HandSlot/PilesHolder/HandPile/ZoneContainer/VBoxContainer/HBoxContainer" index="1"]
visible = false

[node name="UndoButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 72.0
offset_top = -20.0
offset_right = 154.0
offset_bottom = 11.0
theme_override_fonts/font = ExtResource("6_jaq8v")
text = "вернуть"

[connection signal="pressed" from="UndoButton" to="." method="_on_undo_button_pressed"]

[editable path="ActiveSlot"]
[editable path="ActiveSlot/PilesHolder/ActivePile"]
[editable path="HandSlot"]
[editable path="HandSlot/PilesHolder/HandPile"]
